<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTxtTitulo"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="monospace"
        />

    <TextView
        android:id="@+id/txtSubTItulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTxtSubTitulo"
        android:textSize="20sp"
        android:textColor="@color/clrCinza"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

    <EditText
        android:id="@+id/editTxtSalario"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/appTxtHint"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtSubTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTxtSubTitulo2"
        android:textSize="20sp"
        android:textColor="@color/clrCinza"
        android:textStyle="bold"
        android:fontFamily="monospace"
        />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/clrLaranja"
            android:fontFamily="monospace"
            android:text="@string/appTxtAumento40"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/clrLaranja"
            android:fontFamily="monospace"
            android:text="@string/appTxtAumento45"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/clrLaranja"
            android:fontFamily="monospace"
            android:text="@string/appTxtAumento50"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RadioGroup>
    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/appTxtResultado"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/appBtnSet"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/clrLaranja"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limpar"
        android:text="@string/appBtnReset"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/clrLaranja"
        android:padding="10dp"/>
</LinearLayout>